primeira parte do projeto

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Miguel Alexandre desenvolvedor Fullstack</title>
 </head>
 <body>
+    foto
+    Legenda.
+
+    Qualificações
+
+    rodapé
     
 </body>
 </html>
