Adiçao da pasta img e introducao da foto de perfil na pagina

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Miguel Alexandre desenvolvedor Fullstack</title>
 </head>
 <body>
-    foto
+    <figure>
+        <img src="img/foto.jpeg" alt="foto">
+    </figure>
     Legenda.
 
     Qualificações
