--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <figure>
         <img src="img/foto.jpeg" alt="foto">
+        <figcaption>Miguel Alexandre. Desenvolvedor Fullstack</figcaption>
     </figure>
     Legenda.
 
@@ -16,7 +17,7 @@
 
     Skills
 
-    rodapé
+    Rodapé
     
 </body>
 </html>
