Primeira parte semantica

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Miguel Alexandre desenvolvedor Fullstack</title>
 </head>
 <body>
-    <figure>
+    <header>
+     <figure>
         <img src="img/foto.jpeg" alt="foto">
         <figcaption>Miguel Alexandre. Desenvolvedor Fullstack</figcaption>
-    </figure>
+     </figure>
+
     Legenda.
 
     Qualificações
