Comento de emplementaçao de rodape

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <header>
      <figure>
-        <img src="img/foto.jpeg" alt="foto">
+    <main>
+        <img id="img" src="img/foto.jpeg" alt="foto">
         <figcaption>Miguel Alexandre. Desenvolvedor Fullstack</figcaption>
      </figure>
 
@@ -20,8 +21,11 @@
     Qualificações
 
     Skills
-
-    Rodapé
+   </main>
+   <footer>
+      <a href="https://www.linkedin.com/in/miguel-alexandre-web
+      "> <img src="img/linkedin.png" alt="linkedin" id="icone1"></a>
+   </footer>
     
 </body>
 </html>
